chore: init ursa fork

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,4 +31,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/kademlia-exporter:${{ steps.branch-name.outputs.current_branch }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ursa-exporter:${{ steps.branch-name.outputs.current_branch }}
