--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "kademlia-exporter"
+name = "ursa-exporter"
 version = "0.7.0"
-authors = ["Max Inden <mail@max-inden.de>"]
+authors = ["Max Inden <mail@max-inden.de>", "Ossian Mapes <oz@fleek.xyz>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,7 +12,7 @@ cidr = "0.2.1"
 csv = "1.2.0"
 env_logger = "0.10.0"
 futures = "0.3.26"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", branch = "master", version = "0.51", default-features = false, features = ["dns", "async-std", "noise", "tcp", "yamux", "identify", "kad", "ping", "mplex", "metrics", "quic", "rsa", "macros"] }
+libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", branch = "master", version = "0.51", default-features = false, features = ["dns", "async-std", "noise", "tcp", "yamux", "identify", "kad", "ping", "mplex", "metrics", "quic", "rsa", "macros", "serde"] }
 log = "0.4.17"
 prometheus-client = "0.19.0"
 parking_lot = "0.12"
@@ -26,7 +26,9 @@ futures-timer = "3.0.2"
 maxminddb = "0.23.0"
 serde = "1.0.152"
 serde_derive = "1.0.125"
+serde_json = "1"
 toml = "0.7.2"
+geohash = "0.13.0"
 
 # Include debugging symbols in release binary.
 [profile.release]
